# StudyBoy

./: CMakeLists.txt  README.md  main.cpp  tests.cpp  tests.h
core/: GameBoyConfig.h  GameBoyCore.cpp  GameBoyCore.h  RomReader.cpp  RomReader.h
core/cpu/: ColorProcessor.cpp  ColorProcessor.h  DmgProcessor.cpp  DmgProcessor.h  Processor.cpp  Processor.h
core/cpu/codeloaders/: CodeLoader.cpp  CodeLoader.h
core/cpu/components/: CpuRegisters.h  DmaController.cpp  DmaController.h  FlagRegister.cpp  FlagRegister.h  FrequencyDivider.cpp  FrequencyDivider.h  IORegisters.cpp  IORegisters.h  Register.cpp  Register.h  Timer.cpp  Timer.h
core/cpu/instructions/: Instruction.cpp  Instruction.h  flag_settings.txt
core/cpu/memory_controllers/: Mbc1MemoryController.cpp  Mbc1MemoryController.h  Mbc2MemoryController.cpp  Mbc2MemoryController.h  MemoryController.cpp  MemoryController.h  RomOnlyMemoryController.cpp  RomOnlyMemoryController.h
core/input/: InputDriver.cpp  InputDriver.h
core/input/keyboard_driver/: KeyboardDriver.cpp  KeyboardDriver.h
core/lcd/: LcdController.cpp  LcdController.h
core/memory/: MemoryMap.cpp  MemoryMap.h
